--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "redux": "^5.0.0"
   },
   "devDependencies": {
+    "@playwright/test": "^1.42.1",
     "@types/node": "^20",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
