--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@reduxjs/toolkit": "^2.0.1",
     "cookies-next": "^4.1.0",
     "moment": "^2.30.1",
-    "next": "14.0.4",
+    "next": "^14.2.4",
     "next-redux-wrapper": "^8.1.0",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
