--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.15.0",
     "@reduxjs/toolkit": "^2.0.1",
     "cookies-next": "^4.1.0",
+    "googleapis": "^140.0.0",
     "moment": "^2.30.1",
     "next": "^14.2.4",
     "next-redux-wrapper": "^8.1.0",
@@ -22,7 +23,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.3",
-    "redux": "^5.0.0"
+    "redux": "^5.0.0",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "@playwright/test": "^1.42.1",
