--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^5.15.0",
     "@mui/material": "^5.15.0",
     "@reduxjs/toolkit": "^2.0.1",
+    "axios": "^1.7.2",
     "cookies-next": "^4.1.0",
     "googleapis": "^140.0.0",
     "moment": "^2.30.1",
