--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.606.0",
+    "@aws-sdk/lib-storage": "^3.606.0",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.0",
@@ -16,7 +18,9 @@
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.7.2",
     "cookies-next": "^4.1.0",
+    "formidable": "^3.5.1",
     "googleapis": "^140.0.0",
+    "io": "^1.5.0",
     "moment": "^2.30.1",
     "next": "^14.2.4",
     "next-redux-wrapper": "^8.1.0",
